--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --text-muted: #555;
     --font-body: 'Poppins', sans-serif;
     --font-logo: 'Pacifico', cursive;
+    --footer-backgraound: #0a0a1a;
 }
     
     * {
@@ -46,6 +47,10 @@ a{
     color: inherit;
 }
 
+ul li {
+    list-style: none;
+}
+
 .container{
     width: 90%;
     max-width: 1200px;
@@ -68,6 +73,7 @@ a{
 
 .logo{
     font-family: var(--font-logo);
+    font-weight: 500;
     font-size: 2rem;
     color: var(--primary-color);
 }
@@ -194,6 +200,7 @@ a{
 .hours p{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .address{
@@ -209,4 +216,126 @@ a{
 .contact-image img{
     object-fit: cover;
     overflow: hidden;
+}
+
+.footer{
+    background-color: var(--footer-backgraound);
+    color: var(--brackgroung-color);
+}
+
+.footer h3{
+    color: var(--brackgroung-color);
+}
+
+.footer-inner{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 2rem 0;
+}
+
+.footer-brand{
+    width: 85%;
+    margin: 0 auto;
+}
+
+.footer-brand .logo{
+    margin-bottom: 0.5rem;
+}
+
+.social-icons{
+    display: flex;
+    justify-content: center;   
+    gap: 1rem;
+}
+
+.social-icons img{
+    width: 1.5rem;
+    height: auto;
+}
+
+.social-icons a{
+    border-radius: 50px;
+    background-color: #555;
+    padding: 0.5rem;
+}
+
+.social-icons a:hover{
+    background-color: #333;
+    transform: scale(1.3);
+}
+
+.footer-social p {
+    font-size: 0.9rem;
+    padding: 2rem 0 1rem 0;
+    text-align: center;
+}
+
+@media (min-width: 768px){
+    .grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 1024px){
+
+    .menu-desktop{
+        display: block;
+    }
+    .menu-desktop ul{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1.5rem;
+    }
+
+    .menu-desktop ul a{
+        font-weight: 500;
+    }
+    .menu-mobile{
+        display: none;
+    }
+
+    .hero-overlay{
+        padding: 16rem 0;
+    }
+    .grid{
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .contact-box{
+        flex-direction: row;
+        max-width: 900px ;
+    }
+
+    .column{
+        flex: 1 1 50%;
+    }
+
+    .contact-image{
+        max-height: 550px;
+        display: flex;
+    }
+
+    .contact-text{
+        padding: 3rem;
+    }
+
+    .contact-text h2{
+        font-size: 2.5rem;
+        margin-top: 0.5rem;
+    }
+
+    .footer-inner{
+        flex-direction: row;
+    }
+    .footer-social p{
+        text-align: right;
+        padding: 1rem 0 0 0;
+    }
+
+    .social-icons{
+        justify-content: flex-end;
+    }
+
 }
